Fixed spacing on mobile on the contact me part

--- a/src/About/style/contact.css
+++ b/src/About/style/contact.css
@@ -11,7 +11,7 @@
 }
 
 .contactcon{
-    width: clamp(350px, 50vw, 500px);
+    width: clamp(340px, 50vw, 500px);
     padding: max(1rem, .25vw) 0;
     display: flex;
     flex-direction: column;
